// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main test suite should render properly in JSON 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        Object {
          "position": "relative",
        },
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#1F2937",
        }
      }
    >
      <View>
        <RCTScrollView
          nestedScrollEnabled={true}
          style={
            Object {
              "paddingBottom": 20,
              "paddingHorizontal": 16,
              "paddingTop": 20,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "#1F2937",
                  "padding": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginLeft": 0,
                    "paddingBottom": 5,
                    "paddingLeft": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                          "paddingLeft": 0,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "fontSize": 15,
                            "marginLeft": 0,
                            "transform": Array [
                              Object {
                                "rotate": "90deg",
                              },
                            ],
                          }
                        }
                      >
                        ▶
                      </Text>
                    </View>
                  </View>
                  <Text
                    onPress={[Function]}
                    style={
                      Object {
                        "color": "#F9FAFB",
                        "flexDirection": "row",
                      }
                    }
                  />
                  <Text
                    onPress={[Function]}
                    style={
                      Object {
                        "color": "#06B6D4",
                        "marginLeft": 5,
                      }
                    }
                  >
                    <Text>
                      <Text>
                        {}
                      </Text>
                       
                      7 keys
                    </Text>
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "marginLeft": 10,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          1 key
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          1 key
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 3,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          0 keys
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 3,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          0 keys
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          14 keys
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text>
                            {}
                          </Text>
                           
                          1 key
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                        "marginLeft": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#F9FAFB",
                          "flexDirection": "row",
                          "marginBottom": 8,
                        }
                      }
                    />
                    <Text
                      style={
                        Object {
                          "color": "#4D7C0F",
                          "marginLeft": 5,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Main test suite should render properly in raw 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        Object {
          "position": "relative",
        },
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#1F2937",
        }
      }
    >
      <View>
        <RCTScrollView
          nestedScrollEnabled={true}
          style={
            Object {
              "paddingBottom": 20,
              "paddingHorizontal": 16,
              "paddingTop": 20,
            }
          }
        >
          <View />
        </RCTScrollView>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Main test suite should render properly without title 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        Object {
          "position": "relative",
        },
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#1F2937",
        }
      }
    >
      <View>
        <RCTScrollView
          nestedScrollEnabled={true}
          style={
            Object {
              "paddingBottom": 20,
              "paddingHorizontal": 16,
              "paddingTop": 20,
            }
          }
        >
          <View />
        </RCTScrollView>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
